[package]
name = "confy"
version = "1.0.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
description = "Boilerplate-free configuration management"
license = "MIT/X11 OR Apache-2.0"
documentation = "https://docs.rs/confy"
repository = "https://github.com/rust-cli/confy"
readme = "README.md"
edition = "2024"

[dependencies]
ron = { version = "0.10.1", optional = true }
directories = "6"
serde = "^1.0"
serde_yaml = { version = "0.9", optional = true }
thiserror = "2.0"
basic-toml = { version = "0.1.10", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["toml_conf"]
toml_conf = ["toml"]
basic_toml_conf = ["basic-toml"]
yaml_conf = ["serde_yaml"]
ron_conf = ["ron"]

[[example]]
name = "simple"

[dev-dependencies]
serde_derive = "^1.0"
tempfile = "3.16.0"
